--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,20 +7,16 @@
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
-		// if we want to install r packages using pak
+		// to install r packages using pak
 		// more info: https://github.com/rocker-org/devcontainer-features/blob/main/src/r-packages/README.md
-		"ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {
-			"packages": ""			
-		},
 		 "ghcr.io/rocker-org/devcontainer-features/r-packages:1": {
-			"packages": "Matrix,cli,rlang,RcppEigen,TMB,ggplot2,dplyr,scales,covr",
+			"packages": "quarto,this.path,magrittr,dplyr,stringr,ggplot2,rjags,PIFSCstockassessments/JABBA@PIFSC-dev",
 			 "installSystemRequirements": true
-		  }
-		},
-	// // if we want quarto cli
+		  },
+	// // for quarto cli
 	     // more info: https://github.com/rocker-org/devcontainer-features/blob/main/src/quarto-cli/README.md
-	//    "ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {}
-	// },
+	     "ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {}
+	 },
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
@@ -34,15 +30,11 @@
 	 		// Set *default* container specific settings.json values on container create.
 	 		// Add the IDs of extensions you want installed when the container is created.
 	 		"extensions": [
-		        // if we want liveshare.
-	 			"ms-vsliveshare.vsliveshare"
 				 "GitHub.codespaces",
-				 "bbenoist.Doxygen",
 				 "matepek.vscode-catch2-text-adapter",
 				 "hbenl.vscode-test-explorer",
-				 "reditorsupport.r",
-				 "rdebugger.r-debugger",
-                                 "github.vscode-pull-request-github"
+				 "reditorsupport.r"
+				 
 	 		]
 	     }
 	 
