--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,12 @@
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "ghcr.io/rocker-org/devcontainer/r-ver:4.3", //commma needed if other sections are used.
 
+	"hostRequirements": {
+		"cpus": 8,
+		"memory": "8gb",
+		"storage": "32gb"
+	 },
+	 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		//to install JAGS 
@@ -19,10 +25,10 @@
 		  },
 	// // for quarto cli
 	     // more info: https://github.com/rocker-org/devcontainer-features/blob/main/src/quarto-cli/README.md
-	     "ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {}
+	     "ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {},
 
 		 //to use Rstudio as IDE instead of VS code
-		// "ghcr.io/rocker-org/devcontainer-features/rstudio-server:0": {}
+		 "ghcr.io/rocker-org/devcontainer-features/rstudio-server:0": {}
 	 },
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
